--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     }
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
     "concurrently": "^3.6.1",
     "express-http-proxy": "^1.2.0",
     "immutable": "^3.8.2",
     "react": "^16.4.2",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
