--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.7.2",
     "concurrently": "^3.6.1",
     "express-http-proxy": "^1.2.0",
+    "font-awesome": "^4.7.0",
     "immutable": "^3.8.2",
     "react": "^16.4.2",
     "react-chartjs-2": "^2.7.4",
