--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "concurrently": "^3.6.1",
     "express-http-proxy": "^1.2.0",
     "font-awesome": "^4.7.0",
-    "immutable": "^3.8.2",
     "react": "^16.4.2",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
     "whatwg-fetch": "^2.0.4"
   },
@@ -29,10 +27,15 @@
     "client": "react-scripts start",
     "server": "node proxy-server",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --coverage",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "http-proxy-middleware": "^0.18.0"
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "enzyme-to-json": "^3.3.4",
+    "http-proxy-middleware": "^0.18.0",
+    "jest": "^23.5.0",
+    "redux-mock-store": "^1.5.3"
   }
 }
